# condcopula

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: STAN2.stan
src/condcopula/: __init__.py  sampling.py
src/condcopula/stan/: STAN.stan
tests/: basic_test.py
