[project]
name = "condcopula"
version = "0.1.0"
description = ""
authors = [
    {name = "Mark Cus babic",email = "mark-cus@outlook.com"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pyvinecopulib (>=0.7.5,<0.8.0)",
    "cmdstanpy (>=1.3.0,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "condcopula", from = "src"}]

include = [
    "src/condcopula/stan/STAN.stan",
    "src/condcopula/stan/STAN2.stan",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
